[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
license = "MIT"
edition = "2021"

[workspace.dependencies]
glyn_codegen = { path = "crates/glyn_codegen" }
glyn_execution_model = { path = "crates/glyn_execution_model" }
glyn_interpreter = { path = "crates/glyn_interpreter" }
glyn_lexer = { path = "crates/glyn_lexer" }
glyn_unicode = { path = "crates/glyn_unicode" }
safe-gc = "1.1.1"
