[package]
name = "glyn_interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glyn_execution_model = { workspace = true }
glyn_codegen = { workspace = true }
glyn_unicode = { workspace = true }
safe-gc = { workspace = true }

[[bin]]
name = "eval_script"
path = "src/bin/eval_script.rs"
